Commiting because need to switch to another branch. SetupNavigator has first draft database handling for coarse time offsets. CalcCoarseTimeOffset plotter copied from PlotTDiff will do work of calculating offsets for timing algorithms. Error in grabbing pedestals from SetupNavigator was fixed.

--- a/analyzer/rootana/configurations/time_offset.cfg
+++ b/analyzer/rootana/configurations/time_offset.cfg
@@ -6,38 +6,95 @@ dump_contents
 analyse_pulses = MakeAnalysedPulses
 
 ## Plot TDiffs
-#r11_r2_f= PlotTDiff( SiR1-1-F , muSc ) 
-#r12_r2_f= PlotTDiff( SiR1-2-F , muSc ) 
-#r13_r2_f= PlotTDiff( SiR1-3-F , muSc ) 
-#r14_r2_f= PlotTDiff( SiR1-4-F , muSc ) 
-#r11_r2_s= PlotTDiff( SiR1-1-S , muSc ) 
-#r12_r2_s= PlotTDiff( SiR1-2-S , muSc ) 
-#r13_r2_s= PlotTDiff( SiR1-3-S , muSc ) 
-#r14_r2_s= PlotTDiff( SiR1-4-S , muSc ) 
+r11_r2_f= PlotTDiff( SiR1-1-F , muSc ) 
+r12_r2_f= PlotTDiff( SiR1-2-F , muSc ) 
+r13_r2_f= PlotTDiff( SiR1-3-F , muSc ) 
+r14_r2_f= PlotTDiff( SiR1-4-F , muSc ) 
+r11_r2_s= PlotTDiff( SiR1-1-S , muSc ) 
+r12_r2_s= PlotTDiff( SiR1-2-S , muSc ) 
+r13_r2_s= PlotTDiff( SiR1-3-S , muSc ) 
+r14_r2_s= PlotTDiff( SiR1-4-S , muSc ) 
 
-#l11_l2_f= PlotTDiff( SiL1-1-F , muSc ) 
-#l12_l2_f= PlotTDiff( SiL1-2-F , muSc ) 
-#l13_l2_f= PlotTDiff( SiL1-3-F , muSc ) 
-#l14_l2_f= PlotTDiff( SiL1-4-F , muSc ) 
-#l11_l2_s= PlotTDiff( SiL1-1-S , muSc ) 
-#l12_l2_s= PlotTDiff( SiL1-2-S , muSc ) 
-#l13_l2_s= PlotTDiff( SiL1-3-S , muSc ) 
-#l14_l2_s= PlotTDiff( SiL1-4-S , muSc ) 
+l11_l2_f= PlotTDiff( SiL1-1-F , muSc ) 
+l12_l2_f= PlotTDiff( SiL1-2-F , muSc ) 
+l13_l2_f= PlotTDiff( SiL1-3-F , muSc ) 
+l14_l2_f= PlotTDiff( SiL1-4-F , muSc ) 
+l11_l2_s= PlotTDiff( SiL1-1-S , muSc ) 
+l12_l2_s= PlotTDiff( SiL1-2-S , muSc ) 
+l13_l2_s= PlotTDiff( SiL1-3-S , muSc ) 
+l14_l2_s= PlotTDiff( SiL1-4-S , muSc ) 
 
-#l2_s_sL = PlotTDiff( SiL2-S   , muSc ) 
-#l2_f_sL = PlotTDiff( SiL2-F   , muSc ) 
+l2_s_sL = PlotTDiff( SiL2-S   , muSc ) 
+l2_f_sL = PlotTDiff( SiL2-F   , muSc ) 
 
-#sV_mS   = PlotTDiff( ScVe     , muSc   ) 
-#G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
-#G_s_mS  = PlotTDiff( Ge-S     , muSc   ) 
-#sG_mS   = PlotTDiff( ScGe     , muSc   ) 
+sV_mS   = PlotTDiff( ScVe     , muSc   ) 
+G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
+G_s_mS  = PlotTDiff( Ge-S     , muSc   ) 
+sG_mS   = PlotTDiff( ScGe     , muSc   ) 
 
 
 [ analyse_pulses ]
-analyse_channels=NDet
-default_fast_generator=CFTime
-default_slow_generator=CFTime
-#MaxBinNoShift=all
-#CFNoShift=all
+analyse_channels=all
+
+muSc=CFTimeNoShift
+muSc+=MaxBinNoShift
+
+ScVe=CFTimeNoShift
+ScVe+=MaxBinNoShift
+
+Ge-S=CFTimeNoShift
+Ge-S+=MaxBinNoShift
+
+Ge-F=CFTimeNoShift
+Ge-F+=MaxBinNoShift
+
+ScGe=CFTimeNoShift
+ScGe+=MaxBinNoShift
+
+SiR2-S=CFTimeNoShift
+SiR2-S+=MaxBinNoShift
+
+SiL2-S=CFTimeNoShift
+SiL2-S+=MaxBinNoShift
+
+SiR1-1-F=CFTimeNoShift
+SiR1-1-F+=MaxBinNoShift
+SiR1-1-S=CFTimeNoShift
+SiR1-1-S+=MaxBinNoShift
+
+SiR1-2-F=CFTimeNoShift
+SiR1-2-F+=MaxBinNoShift
+SiR1-2-S=CFTimeNoShift
+SiR1-2-S+=MaxBinNoShift
+
+SiR1-3-F=CFTimeNoShift
+SiR1-3-F+=MaxBinNoShift
+SiR1-3-S=CFTimeNoShift
+SiR1-3-S+=MaxBinNoShift
+
+SiR1-4-F=CFTimeNoShift
+SiR1-4-F+=MaxBinNoShift
+SiR1-4-S=CFTimeNoShift
+SiR1-4-S+=MaxBinNoShift
+
+SiL1-1-F=CFTimeNoShift
+SiL1-1-F+=MaxBinNoShift
+SiL1-1-S=CFTimeNoShift
+SiL1-1-S+=MaxBinNoShift
+
+SiL1-2-F=CFTimeNoShift
+SiL1-2-F+=MaxBinNoShift
+SiL1-2-S=CFTimeNoShift
+SiL1-2-S+=MaxBinNoShift
+
+SiL1-3-F=CFTimeNoShift
+SiL1-3-F+=MaxBinNoShift
+SiL1-3-S=CFTimeNoShift
+SiL1-3-S+=MaxBinNoShift
+
+SiL1-4-F=CFTimeNoShift
+SiL1-4-F+=MaxBinNoShift
+SiL1-4-S=CFTimeNoShift
+SiL1-4-S+=MaxBinNoShift
 
 # vim: set syn=cfg:
