--- a/analyzer/rootana/configurations/time_offset.cfg
+++ b/analyzer/rootana/configurations/time_offset.cfg
@@ -6,95 +6,95 @@ dump_contents
 analyse_pulses = MakeAnalysedPulses
 
 ## Plot TDiffs
-r11_r2_f= PlotTDiff( SiR1-1-F , muSc ) 
-r12_r2_f= PlotTDiff( SiR1-2-F , muSc ) 
-r13_r2_f= PlotTDiff( SiR1-3-F , muSc ) 
-r14_r2_f= PlotTDiff( SiR1-4-F , muSc ) 
-r11_r2_s= PlotTDiff( SiR1-1-S , muSc ) 
-r12_r2_s= PlotTDiff( SiR1-2-S , muSc ) 
-r13_r2_s= PlotTDiff( SiR1-3-S , muSc ) 
-r14_r2_s= PlotTDiff( SiR1-4-S , muSc ) 
+# r11_r2_f= PlotTDiff( SiR1-1-F , muSc ) 
+# r12_r2_f= PlotTDiff( SiR1-2-F , muSc ) 
+# r13_r2_f= PlotTDiff( SiR1-3-F , muSc ) 
+# r14_r2_f= PlotTDiff( SiR1-4-F , muSc ) 
+# r11_r2_s= PlotTDiff( SiR1-1-S , muSc ) 
+# r12_r2_s= PlotTDiff( SiR1-2-S , muSc ) 
+# r13_r2_s= PlotTDiff( SiR1-3-S , muSc ) 
+# r14_r2_s= PlotTDiff( SiR1-4-S , muSc ) 
 
-l11_l2_f= PlotTDiff( SiL1-1-F , muSc ) 
-l12_l2_f= PlotTDiff( SiL1-2-F , muSc ) 
-l13_l2_f= PlotTDiff( SiL1-3-F , muSc ) 
-l14_l2_f= PlotTDiff( SiL1-4-F , muSc ) 
-l11_l2_s= PlotTDiff( SiL1-1-S , muSc ) 
-l12_l2_s= PlotTDiff( SiL1-2-S , muSc ) 
-l13_l2_s= PlotTDiff( SiL1-3-S , muSc ) 
-l14_l2_s= PlotTDiff( SiL1-4-S , muSc ) 
+# l11_l2_f= PlotTDiff( SiL1-1-F , muSc ) 
+# l12_l2_f= PlotTDiff( SiL1-2-F , muSc ) 
+# l13_l2_f= PlotTDiff( SiL1-3-F , muSc ) 
+# l14_l2_f= PlotTDiff( SiL1-4-F , muSc ) 
+# l11_l2_s= PlotTDiff( SiL1-1-S , muSc ) 
+# l12_l2_s= PlotTDiff( SiL1-2-S , muSc ) 
+# l13_l2_s= PlotTDiff( SiL1-3-S , muSc ) 
+# l14_l2_s= PlotTDiff( SiL1-4-S , muSc ) 
 
 l2_s_sL = PlotTDiff( SiL2-S   , muSc ) 
 l2_f_sL = PlotTDiff( SiL2-F   , muSc ) 
 
-sV_mS   = PlotTDiff( ScVe     , muSc   ) 
-G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
-G_s_mS  = PlotTDiff( Ge-S     , muSc   ) 
-sG_mS   = PlotTDiff( ScGe     , muSc   ) 
+# sV_mS   = PlotTDiff( ScVe     , muSc   ) 
+# G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
+# G_s_mS  = PlotTDiff( Ge-S     , muSc   ) 
+# sG_mS   = PlotTDiff( ScGe     , muSc   ) 
 
 
 [ analyse_pulses ]
 analyse_channels=all
 
-muSc=CFTimeNoShift
-muSc+=MaxBinNoShift
+muSc=CFTimeNoShift(0.00, 0.50)
+muSc+=MaxBinNoShift(0.00)
 
-ScVe=CFTimeNoShift
-ScVe+=MaxBinNoShift
+#ScVe=CFTimeNoShift(0.00, 0.50)
+#ScVe+=MaxBinNoShift(0.00)
 
-Ge-S=CFTimeNoShift
-Ge-S+=MaxBinNoShift
+#Ge-S=CFTimeNoShift(0.00, 0.50)
+#Ge-S+=MaxBinNoShift(0.00)
 
-Ge-F=CFTimeNoShift
-Ge-F+=MaxBinNoShift
+#Ge-F=CFTimeNoShift(0.00, 0.50)
+#Ge-F+=MaxBinNoShift(0.00)
 
-ScGe=CFTimeNoShift
-ScGe+=MaxBinNoShift
+#ScGe=CFTimeNoShift(0.00, 0.50)
+#ScGe+=MaxBinNoShift(0.00)
 
-SiR2-S=CFTimeNoShift
-SiR2-S+=MaxBinNoShift
+SiR2-S=CFTimeNoShift(0.00, 0.50)
+SiR2-S+=MaxBinNoShift(0.00)
 
-SiL2-S=CFTimeNoShift
-SiL2-S+=MaxBinNoShift
+SiL2-S=CFTimeNoShift(0.00, 0.50)
+SiL2-S+=MaxBinNoShift(0.00)
 
-SiR1-1-F=CFTimeNoShift
-SiR1-1-F+=MaxBinNoShift
-SiR1-1-S=CFTimeNoShift
-SiR1-1-S+=MaxBinNoShift
+#SiR1-1-F=CFTimeNoShift(0.00, 0.50)
+#SiR1-1-F+=MaxBinNoShift(0.00)
+#SiR1-1-S=CFTimeNoShift(0.00, 0.50)
+#SiR1-1-S+=MaxBinNoShift(0.00)
 
-SiR1-2-F=CFTimeNoShift
-SiR1-2-F+=MaxBinNoShift
-SiR1-2-S=CFTimeNoShift
-SiR1-2-S+=MaxBinNoShift
+# SiR1-2-F=CFTimeNoShift(0.00, 0.50)
+# SiR1-2-F+=MaxBinNoShift(0.00)
+# SiR1-2-S=CFTimeNoShift(0.00, 0.50)
+# SiR1-2-S+=MaxBinNoShift(0.00)
 
-SiR1-3-F=CFTimeNoShift
-SiR1-3-F+=MaxBinNoShift
-SiR1-3-S=CFTimeNoShift
-SiR1-3-S+=MaxBinNoShift
+# SiR1-3-F=CFTimeNoShift(0.00, 0.50)
+# SiR1-3-F+=MaxBinNoShift(0.00)
+# SiR1-3-S=CFTimeNoShift(0.00, 0.50)
+# SiR1-3-S+=MaxBinNoShift(0.00)
 
-SiR1-4-F=CFTimeNoShift
-SiR1-4-F+=MaxBinNoShift
-SiR1-4-S=CFTimeNoShift
-SiR1-4-S+=MaxBinNoShift
+# SiR1-4-F=CFTimeNoShift(0.00, 0.50)
+# SiR1-4-F+=MaxBinNoShift(0.00)
+# SiR1-4-S=CFTimeNoShift(0.00, 0.50)
+# SiR1-4-S+=MaxBinNoShift(0.00)
 
-SiL1-1-F=CFTimeNoShift
-SiL1-1-F+=MaxBinNoShift
-SiL1-1-S=CFTimeNoShift
-SiL1-1-S+=MaxBinNoShift
+# SiL1-1-F=CFTimeNoShift(0.00, 0.50)
+# SiL1-1-F+=MaxBinNoShift(0.00)
+# SiL1-1-S=CFTimeNoShift(0.00, 0.50)
+# SiL1-1-S+=MaxBinNoShift(0.00)
 
-SiL1-2-F=CFTimeNoShift
-SiL1-2-F+=MaxBinNoShift
-SiL1-2-S=CFTimeNoShift
-SiL1-2-S+=MaxBinNoShift
+# SiL1-2-F=CFTimeNoShift(0.00, 0.50)
+# SiL1-2-F+=MaxBinNoShift(0.00)
+# SiL1-2-S=CFTimeNoShift(0.00, 0.50)
+# SiL1-2-S+=MaxBinNoShift(0.00)
 
-SiL1-3-F=CFTimeNoShift
-SiL1-3-F+=MaxBinNoShift
-SiL1-3-S=CFTimeNoShift
-SiL1-3-S+=MaxBinNoShift
+# SiL1-3-F=CFTimeNoShift(0.00, 0.50)
+# SiL1-3-F+=MaxBinNoShift(0.00)
+# SiL1-3-S=CFTimeNoShift(0.00, 0.50)
+# SiL1-3-S+=MaxBinNoShift(0.00)
 
-SiL1-4-F=CFTimeNoShift
-SiL1-4-F+=MaxBinNoShift
-SiL1-4-S=CFTimeNoShift
-SiL1-4-S+=MaxBinNoShift
+# SiL1-4-F=CFTimeNoShift(0.00, 0.50)
+# SiL1-4-F+=MaxBinNoShift(0.00)
+# SiL1-4-S=CFTimeNoShift(0.00, 0.50)
+# SiL1-4-S+=MaxBinNoShift(0.00)
 
 # vim: set syn=cfg:
