--- a/analyzer/rootana/configurations/time_offset.cfg
+++ b/analyzer/rootana/configurations/time_offset.cfg
@@ -24,8 +24,8 @@ analyse_pulses = MakeAnalysedPulses
 # l13_l2_s= PlotTDiff( SiL1-3-S , muSc ) 
 # l14_l2_s= PlotTDiff( SiL1-4-S , muSc ) 
 
+r2_s_musc = CalcCoarseTimeOffset(SiR2-S, muSc) 
 l2_s_musc = CalcCoarseTimeOffset(SiL2-S, muSc) 
-l2_f_musc = CalcCoarseTimeOffset(SiL2-S, muSc) 
 
 # sV_mS   = PlotTDiff( ScVe     , muSc   ) 
 # G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
@@ -35,30 +35,30 @@ l2_f_musc = CalcCoarseTimeOffset(SiL2-S, muSc)
 
 [ analyse_pulses ]
 muSc=CFTimeNoShift(0.00, 0.10)
-muSc=CFTimeNoShift(0.00, 0.20)
-muSc=CFTimeNoShift(0.00, 0.50)
-muSc=CFTimeNoShift(0.00, 0.75)
-muSc+=MaxBinNoShift(0.00)
-muSc+=MaxBinNoShift(0.05)
-muSc+=MaxBinNoShift(0.10)
+muSc+=CFTimeNoShift(0.00, 0.20)
+# muSc+=CFTimeNoShift(0.00, 0.50)
+# muSc+=CFTimeNoShift(0.00, 0.75)
+# muSc+=MaxBinNoShift(0.00)
+# muSc+=MaxBinNoShift(0.05)
+# muSc+=MaxBinNoShift(0.10)
 
 
-SiR2-S=CFTimeNoShift(0.00, 0.10)
-SiR2-S=CFTimeNoShift(0.00, 0.20)
-SiR2-S=CFTimeNoShift(0.00, 0.50)
-SiR2-S=CFTimeNoShift(0.00, 0.75)
-SiR2-S+=MaxBinNoShift(0.00)
-SiR2-S+=MaxBinNoShift(0.05)
-SiR2-S+=MaxBinNoShift(0.10)
+# SiR2-S=CFTimeNoShift(0.00, 0.10)
+# SiR2-S+=CFTimeNoShift(0.00, 0.20)
+# SiR2-S+=CFTimeNoShift(0.00, 0.50)
+# SiR2-S+=CFTimeNoShift(0.00, 0.75)
+# SiR2-S+=MaxBinNoShift(0.00)
+# SiR2-S+=MaxBinNoShift(0.05)
+# SiR2-S+=MaxBinNoShift(0.10)
 
 
-SiL2-S=CFTimeNoShift(0.00, 0.10)
-SiL2-S=CFTimeNoShift(0.00, 0.20)
-SiL2-S=CFTimeNoShift(0.00, 0.50)
-SiL2-S=CFTimeNoShift(0.00, 0.75)
-SiL2-S+=MaxBinNoShift(0.00)
-SiL2-S+=MaxBinNoShift(0.05)
-SiL2-S+=MaxBinNoShift(0.10
+# SiL2-S=CFTimeNoShift(0.00, 0.10)
+# SiL2-S+=CFTimeNoShift(0.00, 0.20)
+# SiL2-S+=CFTimeNoShift(0.00, 0.50)
+# SiL2-S+=CFTimeNoShift(0.00, 0.75)
+# SiL2-S+=MaxBinNoShift(0.00)
+# SiL2-S+=MaxBinNoShift(0.05)
+# SiL2-S+=MaxBinNoShift(0.10)
 
 
 #ScVe=CFTimeNoShift(0.00, 0.50)
