--- a/analyzer/rootana/configurations/time_offset.cfg
+++ b/analyzer/rootana/configurations/time_offset.cfg
@@ -6,290 +6,290 @@ dump_contents
 analyse_pulses = MakeAnalysedPulses
 
 ## Plot TDiffs
-r11f = CalcCoarseTimeOffset(SiR1-1-F, muSc) 
-r12f = CalcCoarseTimeOffset(SiR1-2-F, muSc) 
-r13f = CalcCoarseTimeOffset(SiR1-3-F, muSc) 
-r14f = CalcCoarseTimeOffset(SiR1-4-F, muSc) 
-r11s = CalcCoarseTimeOffset(SiR1-1-S, muSc) 
-r12s = CalcCoarseTimeOffset(SiR1-2-S, muSc) 
-r13s = CalcCoarseTimeOffset(SiR1-3-S, muSc) 
-r14s = CalcCoarseTimeOffset(SiR1-4-S, muSc) 
+# r11f = CalcCoarseTimeOffset(SiR1-1-F, muSc) 
+# r12f = CalcCoarseTimeOffset(SiR1-2-F, muSc) 
+# r13f = CalcCoarseTimeOffset(SiR1-3-F, muSc) 
+# r14f = CalcCoarseTimeOffset(SiR1-4-F, muSc) 
+# r11s = CalcCoarseTimeOffset(SiR1-1-S, muSc) 
+# r12s = CalcCoarseTimeOffset(SiR1-2-S, muSc) 
+# r13s = CalcCoarseTimeOffset(SiR1-3-S, muSc) 
+# r14s = CalcCoarseTimeOffset(SiR1-4-S, muSc) 
 
-l11f = CalcCoarseTimeOffset(SiL1-1-F, muSc) 
-l12f = CalcCoarseTimeOffset(SiL1-2-F, muSc) 
-l13f = CalcCoarseTimeOffset(SiL1-3-F, muSc) 
-l14f = CalcCoarseTimeOffset(SiL1-4-F, muSc) 
-l11s = CalcCoarseTimeOffset(SiL1-1-S, muSc) 
-l12s = CalcCoarseTimeOffset(SiL1-2-S, muSc) 
-l13s = CalcCoarseTimeOffset(SiL1-3-S, muSc) 
-l14s = CalcCoarseTimeOffset(SiL1-4-S, muSc) 
+# l11f = CalcCoarseTimeOffset(SiL1-1-F, muSc) 
+# l12f = CalcCoarseTimeOffset(SiL1-2-F, muSc) 
+# l13f = CalcCoarseTimeOffset(SiL1-3-F, muSc) 
+# l14f = CalcCoarseTimeOffset(SiL1-4-F, muSc) 
+# l11s = CalcCoarseTimeOffset(SiL1-1-S, muSc) 
+# l12s = CalcCoarseTimeOffset(SiL1-2-S, muSc) 
+# l13s = CalcCoarseTimeOffset(SiL1-3-S, muSc) 
+# l14s = CalcCoarseTimeOffset(SiL1-4-S, muSc) 
 
 r2s = CalcCoarseTimeOffset(SiR2-S, muSc) 
-l2s = CalcCoarseTimeOffset(SiL2-S, muSc) 
-r2f = CalcCoarseTimeOffset(SiR2-F, muSc) 
-l2f = CalcCoarseTimeOffset(SiL2-F, muSc) 
+# l2s = CalcCoarseTimeOffset(SiL2-S, muSc) 
+# r2f = CalcCoarseTimeOffset(SiR2-F, muSc) 
+# l2f = CalcCoarseTimeOffset(SiL2-F, muSc) 
 
-sv = CalcCoarseTimeOffset(ScVe, muSc) 
-gf = CalcCoarseTimeOffset(Ge-F, muSc) 
-gs = CalcCoarseTimeOffset(Ge-S, muSc) 
+# sv = CalcCoarseTimeOffset(ScVe, muSc) 
+# gf = CalcCoarseTimeOffset(Ge-F, muSc) 
+# gs = CalcCoarseTimeOffset(Ge-S, muSc) 
 # sG_mS   = CalcCoarseTimeOffset(ScGe, muSc) 
 
 
 [ analyse_pulses ]
-muSc=CFTimeNoShift(0.10)
-muSc+=CFTimeNoShift(0.20)
-muSc+=CFTimeNoShift(0.30)
-muSc+=CFTimeNoShift(0.40)
-muSc+=CFTimeNoShift(0.50)
-muSc+=CFTimeNoShift(0.60)
-muSc+=CFTimeNoShift(0.70)
-muSc+=CFTimeNoShift(0.80)
-muSc+=CFTimeNoShift(0.90)
+# muSc=CFTimeNoShift(0.10)
+# muSc+=CFTimeNoShift(0.20)
+# muSc+=CFTimeNoShift(0.30)
+# muSc+=CFTimeNoShift(0.40)
+# muSc+=CFTimeNoShift(0.50)
+muSc=CFTimeNoShift(0.60)
+# muSc+=CFTimeNoShift(0.70)
+# muSc+=CFTimeNoShift(0.80)
+# muSc+=CFTimeNoShift(0.90)
 muSc+=MaxBinNoShift
 
 
-SiR2-S=CFTimeNoShift(0.10)
-SiR2-S+=CFTimeNoShift(0.20)
-SiR2-S+=CFTimeNoShift(0.30)
-SiR2-S+=CFTimeNoShift(0.40)
-SiR2-S+=CFTimeNoShift(0.50)
-SiR2-S+=CFTimeNoShift(0.60)
-SiR2-S+=CFTimeNoShift(0.70)
-SiR2-S+=CFTimeNoShift(0.80)
-SiR2-S+=CFTimeNoShift(0.90)
+# SiR2-S=CFTimeNoShift(0.10)
+# SiR2-S+=CFTimeNoShift(0.20)
+# SiR2-S+=CFTimeNoShift(0.30)
+# SiR2-S+=CFTimeNoShift(0.40)
+# SiR2-S+=CFTimeNoShift(0.50)
+SiR2-S=CFTimeNoShift(0.60)
+# SiR2-S+=CFTimeNoShift(0.70)
+# SiR2-S+=CFTimeNoShift(0.80)
+# SiR2-S+=CFTimeNoShift(0.90)
 SiR2-S+=MaxBinNoShift
-SiR2-F=CFTimeNoShift(0.10)
-SiR2-F+=CFTimeNoShift(0.20)
-SiR2-F+=CFTimeNoShift(0.30)
-SiR2-F+=CFTimeNoShift(0.40)
-SiR2-F+=CFTimeNoShift(0.50)
-SiR2-F+=CFTimeNoShift(0.60)
-SiR2-F+=CFTimeNoShift(0.70)
-SiR2-F+=CFTimeNoShift(0.80)
-SiR2-F+=CFTimeNoShift(0.90)
-SiR2-F+=MaxBinNoShift
+# SiR2-F=CFTimeNoShift(0.10)
+# SiR2-F+=CFTimeNoShift(0.20)
+# SiR2-F+=CFTimeNoShift(0.30)
+# SiR2-F+=CFTimeNoShift(0.40)
+# SiR2-F+=CFTimeNoShift(0.50)
+# SiR2-F+=CFTimeNoShift(0.60)
+# SiR2-F+=CFTimeNoShift(0.70)
+# SiR2-F+=CFTimeNoShift(0.80)
+# SiR2-F+=CFTimeNoShift(0.90)
+# SiR2-F+=MaxBinNoShift
 
-SiL2-S=CFTimeNoShift(0.10)
-SiL2-S+=CFTimeNoShift(0.20)
-SiL2-S+=CFTimeNoShift(0.30)
-SiL2-S+=CFTimeNoShift(0.40)
-SiL2-S+=CFTimeNoShift(0.50)
-SiL2-S+=CFTimeNoShift(0.60)
-SiL2-S+=CFTimeNoShift(0.70)
-SiL2-S+=CFTimeNoShift(0.80)
-SiL2-S+=CFTimeNoShift(0.90)
-SiL2-S+=MaxBinNoShift
-SiL2-F=CFTimeNoShift(0.10)
-SiL2-F+=CFTimeNoShift(0.20)
-SiL2-F+=CFTimeNoShift(0.30)
-SiL2-F+=CFTimeNoShift(0.40)
-SiL2-F+=CFTimeNoShift(0.50)
-SiL2-F+=CFTimeNoShift(0.60)
-SiL2-F+=CFTimeNoShift(0.70)
-SiL2-F+=CFTimeNoShift(0.80)
-SiL2-F+=CFTimeNoShift(0.90)
-SiL2-F+=MaxBinNoShift
+# SiL2-S=CFTimeNoShift(0.10)
+# SiL2-S+=CFTimeNoShift(0.20)
+# SiL2-S+=CFTimeNoShift(0.30)
+# SiL2-S+=CFTimeNoShift(0.40)
+# SiL2-S+=CFTimeNoShift(0.50)
+# SiL2-S+=CFTimeNoShift(0.60)
+# SiL2-S+=CFTimeNoShift(0.70)
+# SiL2-S+=CFTimeNoShift(0.80)
+# SiL2-S+=CFTimeNoShift(0.90)
+# SiL2-S+=MaxBinNoShift
+# SiL2-F=CFTimeNoShift(0.10)
+# SiL2-F+=CFTimeNoShift(0.20)
+# SiL2-F+=CFTimeNoShift(0.30)
+# SiL2-F+=CFTimeNoShift(0.40)
+# SiL2-F+=CFTimeNoShift(0.50)
+# SiL2-F+=CFTimeNoShift(0.60)
+# SiL2-F+=CFTimeNoShift(0.70)
+# SiL2-F+=CFTimeNoShift(0.80)
+# SiL2-F+=CFTimeNoShift(0.90)
+# SiL2-F+=MaxBinNoShift
 
-SiR1-1-F=CFTimeNoShift(0.10)
-SiR1-1-F+=CFTimeNoShift(0.20)
-SiR1-1-F+=CFTimeNoShift(0.30)
-SiR1-1-F+=CFTimeNoShift(0.40)
-SiR1-1-F+=CFTimeNoShift(0.50)
-SiR1-1-F+=CFTimeNoShift(0.60)
-SiR1-1-F+=CFTimeNoShift(0.70)
-SiR1-1-F+=CFTimeNoShift(0.80)
-SiR1-1-F+=CFTimeNoShift(0.90)
-SiR1-1-F+=MaxBinNoShift
-SiR1-1-S=CFTimeNoShift(0.10)
-SiR1-1-S+=CFTimeNoShift(0.20)
-SiR1-1-S+=CFTimeNoShift(0.30)
-SiR1-1-S+=CFTimeNoShift(0.40)
-SiR1-1-S+=CFTimeNoShift(0.50)
-SiR1-1-S+=CFTimeNoShift(0.60)
-SiR1-1-S+=CFTimeNoShift(0.70)
-SiR1-1-S+=CFTimeNoShift(0.80)
-SiR1-1-S+=CFTimeNoShift(0.90)
-SiR1-1-S+=MaxBinNoShift
+# SiR1-1-F=CFTimeNoShift(0.10)
+# SiR1-1-F+=CFTimeNoShift(0.20)
+# SiR1-1-F+=CFTimeNoShift(0.30)
+# SiR1-1-F+=CFTimeNoShift(0.40)
+# SiR1-1-F+=CFTimeNoShift(0.50)
+# SiR1-1-F+=CFTimeNoShift(0.60)
+# SiR1-1-F+=CFTimeNoShift(0.70)
+# SiR1-1-F+=CFTimeNoShift(0.80)
+# SiR1-1-F+=CFTimeNoShift(0.90)
+# SiR1-1-F+=MaxBinNoShift
+# SiR1-1-S=CFTimeNoShift(0.10)
+# SiR1-1-S+=CFTimeNoShift(0.20)
+# SiR1-1-S+=CFTimeNoShift(0.30)
+# SiR1-1-S+=CFTimeNoShift(0.40)
+# SiR1-1-S+=CFTimeNoShift(0.50)
+# SiR1-1-S+=CFTimeNoShift(0.60)
+# SiR1-1-S+=CFTimeNoShift(0.70)
+# SiR1-1-S+=CFTimeNoShift(0.80)
+# SiR1-1-S+=CFTimeNoShift(0.90)
+# SiR1-1-S+=MaxBinNoShift
 
-SiR1-2-F=CFTimeNoShift(0.10)
-SiR1-2-F+=CFTimeNoShift(0.20)
-SiR1-2-F+=CFTimeNoShift(0.30)
-SiR1-2-F+=CFTimeNoShift(0.40)
-SiR1-2-F+=CFTimeNoShift(0.50)
-SiR1-2-F+=CFTimeNoShift(0.60)
-SiR1-2-F+=CFTimeNoShift(0.70)
-SiR1-2-F+=CFTimeNoShift(0.80)
-SiR1-2-F+=CFTimeNoShift(0.90)
-SiR1-2-F+=MaxBinNoShift
-SiR1-2-S=CFTimeNoShift(0.10)
-SiR1-2-S+=CFTimeNoShift(0.20)
-SiR1-2-S+=CFTimeNoShift(0.30)
-SiR1-2-S+=CFTimeNoShift(0.40)
-SiR1-2-S+=CFTimeNoShift(0.50)
-SiR1-2-S+=CFTimeNoShift(0.60)
-SiR1-2-S+=CFTimeNoShift(0.70)
-SiR1-2-S+=CFTimeNoShift(0.80)
-SiR1-2-S+=CFTimeNoShift(0.90)
-SiR1-2-S+=MaxBinNoShift
+# SiR1-2-F=CFTimeNoShift(0.10)
+# SiR1-2-F+=CFTimeNoShift(0.20)
+# SiR1-2-F+=CFTimeNoShift(0.30)
+# SiR1-2-F+=CFTimeNoShift(0.40)
+# SiR1-2-F+=CFTimeNoShift(0.50)
+# SiR1-2-F+=CFTimeNoShift(0.60)
+# SiR1-2-F+=CFTimeNoShift(0.70)
+# SiR1-2-F+=CFTimeNoShift(0.80)
+# SiR1-2-F+=CFTimeNoShift(0.90)
+# SiR1-2-F+=MaxBinNoShift
+# SiR1-2-S=CFTimeNoShift(0.10)
+# SiR1-2-S+=CFTimeNoShift(0.20)
+# SiR1-2-S+=CFTimeNoShift(0.30)
+# SiR1-2-S+=CFTimeNoShift(0.40)
+# SiR1-2-S+=CFTimeNoShift(0.50)
+# SiR1-2-S+=CFTimeNoShift(0.60)
+# SiR1-2-S+=CFTimeNoShift(0.70)
+# SiR1-2-S+=CFTimeNoShift(0.80)
+# SiR1-2-S+=CFTimeNoShift(0.90)
+# SiR1-2-S+=MaxBinNoShift
 
-SiR1-3-F=CFTimeNoShift(0.10)
-SiR1-3-F+=CFTimeNoShift(0.20)
-SiR1-3-F+=CFTimeNoShift(0.30)
-SiR1-3-F+=CFTimeNoShift(0.40)
-SiR1-3-F+=CFTimeNoShift(0.50)
-SiR1-3-F+=CFTimeNoShift(0.60)
-SiR1-3-F+=CFTimeNoShift(0.70)
-SiR1-3-F+=CFTimeNoShift(0.80)
-SiR1-3-F+=CFTimeNoShift(0.90)
-SiR1-3-F+=MaxBinNoShift
-SiR1-3-S=CFTimeNoShift(0.10)
-SiR1-3-S+=CFTimeNoShift(0.20)
-SiR1-3-S+=CFTimeNoShift(0.30)
-SiR1-3-S+=CFTimeNoShift(0.40)
-SiR1-3-S+=CFTimeNoShift(0.50)
-SiR1-3-S+=CFTimeNoShift(0.60)
-SiR1-3-S+=CFTimeNoShift(0.70)
-SiR1-3-S+=CFTimeNoShift(0.80)
-SiR1-3-S+=CFTimeNoShift(0.90)
-SiR1-3-S+=MaxBinNoShift
+# SiR1-3-F=CFTimeNoShift(0.10)
+# SiR1-3-F+=CFTimeNoShift(0.20)
+# SiR1-3-F+=CFTimeNoShift(0.30)
+# SiR1-3-F+=CFTimeNoShift(0.40)
+# SiR1-3-F+=CFTimeNoShift(0.50)
+# SiR1-3-F+=CFTimeNoShift(0.60)
+# SiR1-3-F+=CFTimeNoShift(0.70)
+# SiR1-3-F+=CFTimeNoShift(0.80)
+# SiR1-3-F+=CFTimeNoShift(0.90)
+# SiR1-3-F+=MaxBinNoShift
+# SiR1-3-S=CFTimeNoShift(0.10)
+# SiR1-3-S+=CFTimeNoShift(0.20)
+# SiR1-3-S+=CFTimeNoShift(0.30)
+# SiR1-3-S+=CFTimeNoShift(0.40)
+# SiR1-3-S+=CFTimeNoShift(0.50)
+# SiR1-3-S+=CFTimeNoShift(0.60)
+# SiR1-3-S+=CFTimeNoShift(0.70)
+# SiR1-3-S+=CFTimeNoShift(0.80)
+# SiR1-3-S+=CFTimeNoShift(0.90)
+# SiR1-3-S+=MaxBinNoShift
 
-SiR1-4-F=CFTimeNoShift(0.10)
-SiR1-4-F+=CFTimeNoShift(0.20)
-SiR1-4-F+=CFTimeNoShift(0.30)
-SiR1-4-F+=CFTimeNoShift(0.40)
-SiR1-4-F+=CFTimeNoShift(0.50)
-SiR1-4-F+=CFTimeNoShift(0.60)
-SiR1-4-F+=CFTimeNoShift(0.70)
-SiR1-4-F+=CFTimeNoShift(0.80)
-SiR1-4-F+=CFTimeNoShift(0.90)
-SiR1-4-F+=MaxBinNoShift
-SiR1-4-S=CFTimeNoShift(0.10)
-SiR1-4-S+=CFTimeNoShift(0.20)
-SiR1-4-S+=CFTimeNoShift(0.30)
-SiR1-4-S+=CFTimeNoShift(0.40)
-SiR1-4-S+=CFTimeNoShift(0.50)
-SiR1-4-S+=CFTimeNoShift(0.60)
-SiR1-4-S+=CFTimeNoShift(0.70)
-SiR1-4-S+=CFTimeNoShift(0.80)
-SiR1-4-S+=CFTimeNoShift(0.90)
-SiR1-4-S+=MaxBinNoShift
-
-
-SiL1-1-F=CFTimeNoShift(0.10)
-SiL1-1-F+=CFTimeNoShift(0.20)
-SiL1-1-F+=CFTimeNoShift(0.30)
-SiL1-1-F+=CFTimeNoShift(0.40)
-SiL1-1-F+=CFTimeNoShift(0.50)
-SiL1-1-F+=CFTimeNoShift(0.60)
-SiL1-1-F+=CFTimeNoShift(0.70)
-SiL1-1-F+=CFTimeNoShift(0.80)
-SiL1-1-F+=CFTimeNoShift(0.90)
-SiL1-1-F+=MaxBinNoShift
-SiL1-1-S=CFTimeNoShift(0.10)
-SiL1-1-S+=CFTimeNoShift(0.20)
-SiL1-1-S+=CFTimeNoShift(0.30)
-SiL1-1-S+=CFTimeNoShift(0.40)
-SiL1-1-S+=CFTimeNoShift(0.50)
-SiL1-1-S+=CFTimeNoShift(0.60)
-SiL1-1-S+=CFTimeNoShift(0.70)
-SiL1-1-S+=CFTimeNoShift(0.80)
-SiL1-1-S+=CFTimeNoShift(0.90)
-SiL1-1-S+=MaxBinNoShift
-
-SiL1-2-F=CFTimeNoShift(0.10)
-SiL1-2-F+=CFTimeNoShift(0.20)
-SiL1-2-F+=CFTimeNoShift(0.30)
-SiL1-2-F+=CFTimeNoShift(0.40)
-SiL1-2-F+=CFTimeNoShift(0.50)
-SiL1-2-F+=CFTimeNoShift(0.60)
-SiL1-2-F+=CFTimeNoShift(0.70)
-SiL1-2-F+=CFTimeNoShift(0.80)
-SiL1-2-F+=CFTimeNoShift(0.90)
-SiL1-2-F+=MaxBinNoShift
-SiL1-2-S=CFTimeNoShift(0.10)
-SiL1-2-S+=CFTimeNoShift(0.20)
-SiL1-2-S+=CFTimeNoShift(0.30)
-SiL1-2-S+=CFTimeNoShift(0.40)
-SiL1-2-S+=CFTimeNoShift(0.50)
-SiL1-2-S+=CFTimeNoShift(0.60)
-SiL1-2-S+=CFTimeNoShift(0.70)
-SiL1-2-S+=CFTimeNoShift(0.80)
-SiL1-2-S+=CFTimeNoShift(0.90)
-SiL1-2-S+=MaxBinNoShift
-
-SiL1-3-F=CFTimeNoShift(0.10)
-SiL1-3-F+=CFTimeNoShift(0.20)
-SiL1-3-F+=CFTimeNoShift(0.30)
-SiL1-3-F+=CFTimeNoShift(0.40)
-SiL1-3-F+=CFTimeNoShift(0.50)
-SiL1-3-F+=CFTimeNoShift(0.60)
-SiL1-3-F+=CFTimeNoShift(0.70)
-SiL1-3-F+=CFTimeNoShift(0.80)
-SiL1-3-F+=CFTimeNoShift(0.90)
-SiL1-3-F+=MaxBinNoShift
-SiL1-3-S=CFTimeNoShift(0.10)
-SiL1-3-S+=CFTimeNoShift(0.20)
-SiL1-3-S+=CFTimeNoShift(0.30)
-SiL1-3-S+=CFTimeNoShift(0.40)
-SiL1-3-S+=CFTimeNoShift(0.50)
-SiL1-3-S+=CFTimeNoShift(0.60)
-SiL1-3-S+=CFTimeNoShift(0.70)
-SiL1-3-S+=CFTimeNoShift(0.80)
-SiL1-3-S+=CFTimeNoShift(0.90)
-SiL1-3-S+=MaxBinNoShift
-
-SiL1-4-F=CFTimeNoShift(0.10)
-SiL1-4-F+=CFTimeNoShift(0.20)
-SiL1-4-F+=CFTimeNoShift(0.30)
-SiL1-4-F+=CFTimeNoShift(0.40)
-SiL1-4-F+=CFTimeNoShift(0.50)
-SiL1-4-F+=CFTimeNoShift(0.60)
-SiL1-4-F+=CFTimeNoShift(0.70)
-SiL1-4-F+=CFTimeNoShift(0.80)
-SiL1-4-F+=CFTimeNoShift(0.90)
-SiL1-4-F+=MaxBinNoShift
-SiL1-4-S=CFTimeNoShift(0.10)
-SiL1-4-S+=CFTimeNoShift(0.20)
-SiL1-4-S+=CFTimeNoShift(0.30)
-SiL1-4-S+=CFTimeNoShift(0.40)
-SiL1-4-S+=CFTimeNoShift(0.50)
-SiL1-4-S+=CFTimeNoShift(0.60)
-SiL1-4-S+=CFTimeNoShift(0.70)
-SiL1-4-S+=CFTimeNoShift(0.80)
-SiL1-4-S+=CFTimeNoShift(0.90)
-SiL1-4-S+=MaxBinNoShift
+# SiR1-4-F=CFTimeNoShift(0.10)
+# SiR1-4-F+=CFTimeNoShift(0.20)
+# SiR1-4-F+=CFTimeNoShift(0.30)
+# SiR1-4-F+=CFTimeNoShift(0.40)
+# SiR1-4-F+=CFTimeNoShift(0.50)
+# SiR1-4-F+=CFTimeNoShift(0.60)
+# SiR1-4-F+=CFTimeNoShift(0.70)
+# SiR1-4-F+=CFTimeNoShift(0.80)
+# SiR1-4-F+=CFTimeNoShift(0.90)
+# SiR1-4-F+=MaxBinNoShift
+# SiR1-4-S=CFTimeNoShift(0.10)
+# SiR1-4-S+=CFTimeNoShift(0.20)
+# SiR1-4-S+=CFTimeNoShift(0.30)
+# SiR1-4-S+=CFTimeNoShift(0.40)
+# SiR1-4-S+=CFTimeNoShift(0.50)
+# SiR1-4-S+=CFTimeNoShift(0.60)
+# SiR1-4-S+=CFTimeNoShift(0.70)
+# SiR1-4-S+=CFTimeNoShift(0.80)
+# SiR1-4-S+=CFTimeNoShift(0.90)
+# SiR1-4-S+=MaxBinNoShift
 
 
-ScVe=CFTimeNoShift(0.10)
-ScVe+=CFTimeNoShift(0.20)
-ScVe+=CFTimeNoShift(0.30)
-ScVe+=CFTimeNoShift(0.40)
-ScVe+=CFTimeNoShift(0.50)
-ScVe+=CFTimeNoShift(0.60)
-ScVe+=CFTimeNoShift(0.70)
-ScVe+=CFTimeNoShift(0.80)
-ScVe+=CFTimeNoShift(0.90)
-ScVe+=MaxBinNoShift
+# SiL1-1-F=CFTimeNoShift(0.10)
+# SiL1-1-F+=CFTimeNoShift(0.20)
+# SiL1-1-F+=CFTimeNoShift(0.30)
+# SiL1-1-F+=CFTimeNoShift(0.40)
+# SiL1-1-F+=CFTimeNoShift(0.50)
+# SiL1-1-F+=CFTimeNoShift(0.60)
+# SiL1-1-F+=CFTimeNoShift(0.70)
+# SiL1-1-F+=CFTimeNoShift(0.80)
+# SiL1-1-F+=CFTimeNoShift(0.90)
+# SiL1-1-F+=MaxBinNoShift
+# SiL1-1-S=CFTimeNoShift(0.10)
+# SiL1-1-S+=CFTimeNoShift(0.20)
+# SiL1-1-S+=CFTimeNoShift(0.30)
+# SiL1-1-S+=CFTimeNoShift(0.40)
+# SiL1-1-S+=CFTimeNoShift(0.50)
+# SiL1-1-S+=CFTimeNoShift(0.60)
+# SiL1-1-S+=CFTimeNoShift(0.70)
+# SiL1-1-S+=CFTimeNoShift(0.80)
+# SiL1-1-S+=CFTimeNoShift(0.90)
+# SiL1-1-S+=MaxBinNoShift
 
-Ge-S=CFTimeNoShift(0.10)
-Ge-S+=CFTimeNoShift(0.20)
-Ge-S+=CFTimeNoShift(0.30)
-Ge-S+=CFTimeNoShift(0.40)
-Ge-S+=CFTimeNoShift(0.50)
-Ge-S+=CFTimeNoShift(0.60)
-Ge-S+=CFTimeNoShift(0.70)
-Ge-S+=CFTimeNoShift(0.80)
-Ge-S+=CFTimeNoShift(0.90)
-Ge-S+=MaxBinNoShift
-Ge-F=CFTimeNoShift(0.10)
-Ge-F+=CFTimeNoShift(0.20)
-Ge-F+=CFTimeNoShift(0.30)
-Ge-F+=CFTimeNoShift(0.40)
-Ge-F+=CFTimeNoShift(0.50)
-Ge-F+=CFTimeNoShift(0.60)
-Ge-F+=CFTimeNoShift(0.70)
-Ge-F+=CFTimeNoShift(0.80)
-Ge-F+=CFTimeNoShift(0.90)
-Ge-F+=MaxBinNoShift
+# SiL1-2-F=CFTimeNoShift(0.10)
+# SiL1-2-F+=CFTimeNoShift(0.20)
+# SiL1-2-F+=CFTimeNoShift(0.30)
+# SiL1-2-F+=CFTimeNoShift(0.40)
+# SiL1-2-F+=CFTimeNoShift(0.50)
+# SiL1-2-F+=CFTimeNoShift(0.60)
+# SiL1-2-F+=CFTimeNoShift(0.70)
+# SiL1-2-F+=CFTimeNoShift(0.80)
+# SiL1-2-F+=CFTimeNoShift(0.90)
+# SiL1-2-F+=MaxBinNoShift
+# SiL1-2-S=CFTimeNoShift(0.10)
+# SiL1-2-S+=CFTimeNoShift(0.20)
+# SiL1-2-S+=CFTimeNoShift(0.30)
+# SiL1-2-S+=CFTimeNoShift(0.40)
+# SiL1-2-S+=CFTimeNoShift(0.50)
+# SiL1-2-S+=CFTimeNoShift(0.60)
+# SiL1-2-S+=CFTimeNoShift(0.70)
+# SiL1-2-S+=CFTimeNoShift(0.80)
+# SiL1-2-S+=CFTimeNoShift(0.90)
+# SiL1-2-S+=MaxBinNoShift
+
+# SiL1-3-F=CFTimeNoShift(0.10)
+# SiL1-3-F+=CFTimeNoShift(0.20)
+# SiL1-3-F+=CFTimeNoShift(0.30)
+# SiL1-3-F+=CFTimeNoShift(0.40)
+# SiL1-3-F+=CFTimeNoShift(0.50)
+# SiL1-3-F+=CFTimeNoShift(0.60)
+# SiL1-3-F+=CFTimeNoShift(0.70)
+# SiL1-3-F+=CFTimeNoShift(0.80)
+# SiL1-3-F+=CFTimeNoShift(0.90)
+# SiL1-3-F+=MaxBinNoShift
+# SiL1-3-S=CFTimeNoShift(0.10)
+# SiL1-3-S+=CFTimeNoShift(0.20)
+# SiL1-3-S+=CFTimeNoShift(0.30)
+# SiL1-3-S+=CFTimeNoShift(0.40)
+# SiL1-3-S+=CFTimeNoShift(0.50)
+# SiL1-3-S+=CFTimeNoShift(0.60)
+# SiL1-3-S+=CFTimeNoShift(0.70)
+# SiL1-3-S+=CFTimeNoShift(0.80)
+# SiL1-3-S+=CFTimeNoShift(0.90)
+# SiL1-3-S+=MaxBinNoShift
+
+# SiL1-4-F=CFTimeNoShift(0.10)
+# SiL1-4-F+=CFTimeNoShift(0.20)
+# SiL1-4-F+=CFTimeNoShift(0.30)
+# SiL1-4-F+=CFTimeNoShift(0.40)
+# SiL1-4-F+=CFTimeNoShift(0.50)
+# SiL1-4-F+=CFTimeNoShift(0.60)
+# SiL1-4-F+=CFTimeNoShift(0.70)
+# SiL1-4-F+=CFTimeNoShift(0.80)
+# SiL1-4-F+=CFTimeNoShift(0.90)
+# SiL1-4-F+=MaxBinNoShift
+# SiL1-4-S=CFTimeNoShift(0.10)
+# SiL1-4-S+=CFTimeNoShift(0.20)
+# SiL1-4-S+=CFTimeNoShift(0.30)
+# SiL1-4-S+=CFTimeNoShift(0.40)
+# SiL1-4-S+=CFTimeNoShift(0.50)
+# SiL1-4-S+=CFTimeNoShift(0.60)
+# SiL1-4-S+=CFTimeNoShift(0.70)
+# SiL1-4-S+=CFTimeNoShift(0.80)
+# SiL1-4-S+=CFTimeNoShift(0.90)
+# SiL1-4-S+=MaxBinNoShift
+
+
+# ScVe=CFTimeNoShift(0.10)
+# ScVe+=CFTimeNoShift(0.20)
+# ScVe+=CFTimeNoShift(0.30)
+# ScVe+=CFTimeNoShift(0.40)
+# ScVe+=CFTimeNoShift(0.50)
+# ScVe+=CFTimeNoShift(0.60)
+# ScVe+=CFTimeNoShift(0.70)
+# ScVe+=CFTimeNoShift(0.80)
+# ScVe+=CFTimeNoShift(0.90)
+# ScVe+=MaxBinNoShift
+
+# Ge-S=CFTimeNoShift(0.10)
+# Ge-S+=CFTimeNoShift(0.20)
+# Ge-S+=CFTimeNoShift(0.30)
+# Ge-S+=CFTimeNoShift(0.40)
+# Ge-S+=CFTimeNoShift(0.50)
+# Ge-S+=CFTimeNoShift(0.60)
+# Ge-S+=CFTimeNoShift(0.70)
+# Ge-S+=CFTimeNoShift(0.80)
+# Ge-S+=CFTimeNoShift(0.90)
+# Ge-S+=MaxBinNoShift
+# Ge-F=CFTimeNoShift(0.10)
+# Ge-F+=CFTimeNoShift(0.20)
+# Ge-F+=CFTimeNoShift(0.30)
+# Ge-F+=CFTimeNoShift(0.40)
+# Ge-F+=CFTimeNoShift(0.50)
+# Ge-F+=CFTimeNoShift(0.60)
+# Ge-F+=CFTimeNoShift(0.70)
+# Ge-F+=CFTimeNoShift(0.80)
+# Ge-F+=CFTimeNoShift(0.90)
+# Ge-F+=MaxBinNoShift
 
 # vim: set syn=cfg:
