AE: Create the production config file for rootana production run 3

--- a/analyzer/rootana/configurations/production.cfg
+++ b/analyzer/rootana/configurations/production.cfg
@@ -68,14 +68,80 @@ G_f_mS  = PlotTAP_TDiff( Ge-F     , muSc   )
 G_s_mS  = PlotTAP_TDiff( Ge-S     , muSc   ) 
 sG_mS   = PlotTAP_TDiff( ScGe     , muSc   ) 
 
+# The rest c.f. muSc so that we can check the time offsets are correct
+r11_f_mS= PlotTAP_TDiff( SiR1-1-F , muSc ) 
+r12_f_mS= PlotTAP_TDiff( SiR1-2-F , muSc ) 
+r13_f_mS= PlotTAP_TDiff( SiR1-3-F , muSc ) 
+r14_f_mS= PlotTAP_TDiff( SiR1-4-F , muSc ) 
+
+r11_s_mS= PlotTAP_TDiff( SiR1-1-S , muSc ) 
+r12_s_mS= PlotTAP_TDiff( SiR1-2-S , muSc ) 
+r13_s_mS= PlotTAP_TDiff( SiR1-3-S , muSc ) 
+r14_s_mS= PlotTAP_TDiff( SiR1-4-S , muSc ) 
+
+l11_f_mS= PlotTAP_TDiff( SiL1-1-F , muSc ) 
+l12_f_mS= PlotTAP_TDiff( SiL1-2-F , muSc ) 
+l13_f_mS= PlotTAP_TDiff( SiL1-3-F , muSc ) 
+l14_f_mS= PlotTAP_TDiff( SiL1-4-F , muSc ) 
+
+l11_s_mS= PlotTAP_TDiff( SiL1-1-S , muSc ) 
+l12_s_mS= PlotTAP_TDiff( SiL1-2-S , muSc ) 
+l13_s_mS= PlotTAP_TDiff( SiL1-3-S , muSc ) 
+l14_s_mS= PlotTAP_TDiff( SiL1-4-S , muSc ) 
+
+l2_s_mS= PlotTAP_TDiff( SiL2-S , muSc ) 
+l2_f_mS= PlotTAP_TDiff( SiL2-F , muSc ) 
+r2_s_mS= PlotTAP_TDiff( SiR2-S , muSc ) 
+r2_f_mS= PlotTAP_TDiff( SiR2-F , muSc ) 
+
+sL_s_mS= PlotTAP_TDiff( ScL , muSc ) 
+sR_f_mS= PlotTAP_TDiff( ScR , muSc ) 
+
+n1_mS= PlotTAP_TDiff( NDet, muSc )
+n2_mS= PlotTAP_TDiff( NDet2, muSc )
+
 ## Data Quality
 dq_amp = IslandAmplitude
 dq_len = IslandLength
 
 [ analyse_pulses ]
 analyse_channels=all
-default_fast_generator=FirstComplete
-default_slow_generator=FirstComplete
+muSc=FirstComplete(0.60)
+
+SiR2-S=FirstComplete(0.60)
+SiR2-F=FirstComplete(0.90)
+SiL2-S=FirstComplete(0.60)
+SiL2-F=FirstComplete(0.90)
+
+SiR1-1-S=FirstComplete(0.60)
+SiR1-2-S=FirstComplete(0.40)
+SiR1-3-S=FirstComplete(0.90)
+SiR1-4-S=FirstComplete(0.70)
+
+SiR1-1-F=FirstComplete(0.70)
+SiR1-2-F=FirstComplete(0.60)
+SiR1-3-F=FirstComplete(0.90)
+SiR1-4-F=FirstComplete(0.70)
+
+SiL1-1-S=FirstComplete(0.50)
+SiL1-2-S=FirstComplete(0.30)
+SiL1-3-S=FirstComplete(0.40)
+SiL1-4-S=FirstComplete(0.70)
+
+SiL1-1-F=FirstComplete(0.30)
+SiL1-2-F=FirstComplete(0.10)
+SiL1-3-F=FirstComplete(0.40)
+SiL1-4-F=FirstComplete(0.90)
+
+Ge-S=FirstComplete(0.60)
+Ge-F=FirstComplete(0.90)
+
+NDet=FirstComplete(0.50)
+NDet2=FirstComplete(0.50)
+ScR=FirstComplete(0.50)
+ScL=FirstComplete(0.50)
+ScGe=FirstComplete(0.50)
+ScVe=FirstComplete(0.10)
 
 [ detector_pulses] 
 time_difference=1
