Added slow timing to GeSpectrum

--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -4,8 +4,9 @@ ge = GeSpectrum
 
 [ ge ]
 musc_cf=0.50
-gef_gen=FirstComplete
-gef_cfg={constant_fraction=0.90}
-gef_cf=0.90
+ge_gen=FirstComplete
+ge_cfg={constant_fraction=0.60}
+ge_cf=0.60
+ge_slow_timing=true
 tw_big=5000.0
 tw_small=300.
