Add the TAP->TDP creation. Initially set the time difference beween pulses on the same channel to be less than 1us

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -21,6 +21,9 @@ sil1-2=PlotTAP_TDiff(SiL1-2-S, SiL1-2-F)
 sil1-3=PlotTAP_TDiff(SiL1-3-S, SiL1-3-F)
 sil1-4=PlotTAP_TDiff(SiL1-4-S, SiL1-4-F)
 
+pair_pulses = MakeDetectorPulses
+PlotTDPs
+
 [ analyse_pulses ]
 analyse_channels=muSc
 muSc=FirstComplete(0.60)
@@ -69,3 +72,7 @@ SiL1-1-F=FirstComplete(0.30)
 SiL1-2-F=FirstComplete(0.10)
 SiL1-3-F=FirstComplete(0.40)
 SiL1-4-F=FirstComplete(0.90)
+
+[ pair_pulses ]
+#debug
+time_difference=0.001
