--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -24,6 +24,9 @@ sil1-4=PlotTAP_TDiff(SiL1-4-S, SiL1-4-F)
 pair_pulses = MakeDetectorPulses
 PlotTDPs
 
+muon_events = MakeMuonEvents
+TestTME
+
 [ analyse_pulses ]
 analyse_channels=muSc
 muSc=FirstComplete(0.60)
@@ -76,3 +79,6 @@ SiL1-4-F=FirstComplete(0.90)
 [ pair_pulses ]
 #debug
 time_difference=0.001
+
+[ muon_events ]
+event_window=1e4
