Copied Ben's CheckTMEs module and removed some detectors. Will be playing with this one in the future

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -23,6 +23,10 @@ sil1-4=PlotTAP_TDiff(SiL1-4-S, SiL1-4-F)
 
 pair_pulses = MakeDetectorPulses
 PlotTDPs
+
+muon_events = MakeMuonEvents
+TestTME
+
 [ analyse_pulses ]
 analyse_channels=muSc
 muSc=FirstComplete(0.60)
@@ -75,3 +79,6 @@ SiL1-4-F=FirstComplete(0.90)
 [ pair_pulses ]
 #debug
 time_difference=0.001
+
+[ muon_events ]
+event_window=1e4
