Add a module to plot the TDiffs between a thin pulse and a thick pulse

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -25,7 +25,8 @@ pair_pulses = MakeDetectorPulses
 PlotTDPs
 
 muon_events = MakeMuonEvents
-TestTME
+CheckTMEs
+TME_SiArmTDiff
 
 [ analyse_pulses ]
 analyse_channels=muSc
