--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -27,7 +27,7 @@ PlotTDPs
 muon_events = MakeMuonEvents
 CheckTMEs
 TME_SiArmTDiff
-TME_EvdE(true)
+TME_EvdE(false)
 
 [ analyse_pulses ]
 analyse_channels=muSc
