--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -5,9 +5,9 @@ ge = GeSpectrum
 [ ge ]
 musc_cf=0.50
 ge_gen=FirstComplete
-ge_cfg={constant_fraction=0.60}
-ge_cf=0.60
-ge_slow_timing=true
+ge_cfg={constant_fraction=0.90}
+ge_cf=0.90
+ge_slow_timing=false
 tw_big=5000.0
 tw_small=300.
-calib=true
+calib=false
