Config file for dataset run

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -26,6 +26,7 @@ PlotTDPs
 
 muon_events = MakeMuonEvents
 CheckTMEs
+#TMEViewer
 TME_SiArmTDiff
 TME_EvdE(false)
 
@@ -34,13 +35,13 @@ analyse_channels=muSc
 muSc=FirstComplete(0.60)
 
 analyse_channels+=SiR2-S
-analyse_channels+=SiR2-F
+#analyse_channels+=SiR2-F
 analyse_channels+=SiL2-S
-analyse_channels+=SiL2-F
+#analyse_channels+=SiL2-F
 SiR2-S=FirstComplete(0.60)
-SiR2-F=FirstComplete(0.90)
+#SiR2-F=FirstComplete(0.90)
 SiL2-S=FirstComplete(0.60)
-SiL2-F=FirstComplete(0.90)
+#SiL2-F=FirstComplete(0.90)
 
 analyse_channels+=SiR1-1-S
 analyse_channels+=SiR1-2-S
@@ -51,14 +52,14 @@ SiR1-2-S=FirstComplete(0.40)
 SiR1-3-S=FirstComplete(0.90)
 SiR1-4-S=FirstComplete(0.70)
 
-analyse_channels+=SiR1-1-F
-analyse_channels+=SiR1-2-F
-analyse_channels+=SiR1-3-F
-analyse_channels+=SiR1-4-F
-SiR1-1-F=FirstComplete(0.70)
-SiR1-2-F=FirstComplete(0.60)
-SiR1-3-F=FirstComplete(0.90)
-SiR1-4-F=FirstComplete(0.70)
+#analyse_channels+=SiR1-1-F
+#analyse_channels+=SiR1-2-F
+#analyse_channels+=SiR1-3-F
+#analyse_channels+=SiR1-4-F
+#SiR1-1-F=FirstComplete(0.70)
+#SiR1-2-F=FirstComplete(0.60)
+#SiR1-3-F=FirstComplete(0.90)
+#SiR1-4-F=FirstComplete(0.70)
 
 analyse_channels+=SiL1-1-S
 analyse_channels+=SiL1-2-S
@@ -69,17 +70,18 @@ SiL1-2-S=FirstComplete(0.30)
 SiL1-3-S=FirstComplete(0.40)
 SiL1-4-S=FirstComplete(0.70)
 
-analyse_channels+=SiL1-1-F
-analyse_channels+=SiL1-2-F
-analyse_channels+=SiL1-3-F
-analyse_channels+=SiL1-4-F
-SiL1-1-F=FirstComplete(0.30)
-SiL1-2-F=FirstComplete(0.10)
-SiL1-3-F=FirstComplete(0.40)
-SiL1-4-F=FirstComplete(0.90)
+#analyse_channels+=SiL1-1-F
+#analyse_channels+=SiL1-2-F
+#analyse_channels+=SiL1-3-F
+#analyse_channels+=SiL1-4-F
+#SiL1-1-F=FirstComplete(0.30)
+#SiL1-2-F=FirstComplete(0.10)
+#SiL1-3-F=FirstComplete(0.40)
+#SiL1-4-F=FirstComplete(0.90)
 
 [ pair_pulses ]
 #debug
+default_algorithm=PassThrough
 time_difference=0.001
 
 [ muon_events ]
