Adding proton cut for slow analysis

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -28,7 +28,7 @@ muon_events = MakeMuonEvents
 CheckTMEs
 #TMEViewer
 TME_SiArmTDiff
-TME_EvdE(false)
+TME_EvdE(true)
 
 [ analyse_pulses ]
 analyse_channels=muSc
