Increase TME event size to 15 us

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -28,7 +28,7 @@ muon_events = MakeMuonEvents
 CheckTMEs
 #TMEViewer
 TME_SiArmTDiff
-TME_EvdE(true)
+TME_EvdE(false)
 
 [ analyse_pulses ]
 analyse_channels=muSc
@@ -85,4 +85,4 @@ default_algorithm=PassThrough
 time_difference=0.001
 
 [ muon_events ]
-event_window=1e4
+event_window=1.5e4
