Adding a PlotTAP_Energy module to try ahd check where the flat-top in the EvdE plots comes from

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -7,6 +7,7 @@ analyse_pulses = MakeAnalysedPulses
 
 PlotTAP_Amplitude
 PlotTAP_Time
+PlotTAP_Energy
 
 sir2=PlotTAP_TDiff(SiR2-S, SiR2-F)
 sil2=PlotTAP_TDiff(SiL2-S, SiL2-F)
