Run the EvdE module twice rather than have to do two runs

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -29,7 +29,8 @@ muon_events = MakeMuonEvents
 CheckTMEs
 #TMEViewer
 TME_SiArmTDiff
-TME_EvdE(true)
+all_particles=TME_EvdE(false)
+stopped_protons=TME_EvdE(true)
 
 [ analyse_pulses ]
 analyse_channels=muSc
