Add PulseViewer to look at the pulses in SiL1-1-S with amplitude > 7000

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -9,6 +9,9 @@ PlotTAP_Amplitude
 PlotTAP_Time
 PlotTAP_Energy
 
+pulse_viewer=PulseViewer
+ExportPulse
+
 sir2=PlotTAP_TDiff(SiR2-S, SiR2-F)
 sil2=PlotTAP_TDiff(SiL2-S, SiL2-F)
 
@@ -31,6 +34,12 @@ CheckTMEs
 TME_SiArmTDiff
 all_particles=TME_EvdE(false)
 stopped_protons=TME_EvdE(true)
+
+[ pulse_viewer ]
+source=SiL1-1-S
+trigger=amplitude>7000
+max_plots=20
+stop_at_max_plots=true
 
 [ analyse_pulses ]
 analyse_channels=muSc
