--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -10,4 +10,7 @@ ge_cf=0.90
 ge_slow_timing=false
 tw_big=5000.0
 tw_small=300.
+tw_pp=15000.
+peaks_of_interest=347. 351. 844. 847. 
+musc_min_height=230
 calib=false
