Interpolation working, Some error checking may be needed

--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -31,7 +31,7 @@ else
 endif
 
 # Generate the library flags (-L and -l) for the gcc argument
-ROOT_LIBS = $(shell $(ROOTSYS)/bin/root-config --libs) -lThread -lGui -lMinuit
+ROOT_LIBS = $(shell $(ROOTSYS)/bin/root-config --libs) -lGui -lMinuit -lMathMore
 ALL_LIBS =  $(ROOT_LIBS)
 
 OPTFLAGS = -g -O2
