Changes to the template fit config

--- a/analyzer/rootana/configurations/TestTemplateFits.cfg
+++ b/analyzer/rootana/configurations/TestTemplateFits.cfg
@@ -7,7 +7,7 @@ analysed_pulses=MakeAnalysedPulses
 #templates=TemplateCreator
 #PlotIntegralRatios(SiR2-*#IntegralRatio#any)
 #pulse_viewer=PulseViewer
-ExportPulse
+#ExportPulse
 SavePulses
 #PlotTAP_Amplitude
 #PlotTAP_Time
@@ -26,7 +26,8 @@ analyse_channels=SiR2-F
 ## cut_e
 #default_fast_generator=TemplateFit(cut_b_template.root,true, 10e4, 11e4, 0.7, 0.75 )
 ##no_cut
-default_fast_generator=TemplateFit(cut_b_template.root)
+default_fast_generator=FastTemplateFit(cut_b_template.root,true)
+#SiR2-F=FirstComplete(0.90)
 
 [pulse_viewer]
 source=SiR2-F
@@ -34,9 +35,9 @@ source=SiR2-F
 #trigger= Integral_ratio>0.85 && Integral_ratio<1 && integral> 50e4 && integral <10.5e4
 #trigger= Chi2 > 2e8 && Status ==0 
 trigger= Double_fitted==1
-trigger= amplitude>0
+trigger=1
 pulse_type=TemplateFitAP
 max_plots=10
-stop_at_max_plots=true
-#summarize
-debug
+stop_at_max_plots=false
+summarize
+#debug
