Starting to clean up my branch. First is adding a few items to .gitignore to ignore temporary batch folders and local databases

--- a/analyzer/.gitignore
+++ b/analyzer/.gitignore
@@ -33,3 +33,11 @@ alcapana
 mucap_compress
 mucap_expand
 mucap_optimize
+
+# Temporary Batch Folders
+batch/log
+batch/tmp
+
+# Local databases
+rootana/calibration.db
+rootana/production.db
