Before merging into develop: rename TME_EvdE --> TME_Al50_EvdE to avoid clashes

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -29,8 +29,8 @@ muon_events = MakeMuonEvents
 CheckTMEs
 #TMEViewer
 TME_SiArmTDiff
-all_particles=TME_EvdE(false)
-stopped_protons=TME_EvdE(true)
+all_particles=TME_Al50_EvdE(false)
+stopped_protons=TME_Al50_EvdE(true)
 
 [ analyse_pulses ]
 analyse_channels=muSc
