--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -27,6 +27,7 @@ PlotTDPs
 
 muon_events = MakeMuonEvents
 CheckTMEs
+TME_RemoveScatteredMuons(100);
 #TMEViewer
 TME_SiArmTDiff
 all_particles=TME_Al50_EvdE(false)
