--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -27,33 +27,33 @@ PlotTDPs
 
 muon_events = MakeMuonEvents
 CheckTMEs
-TME_RemoveScatteredMuons(1000);
-#TMEViewer
+#TME_RemoveScatteredMuons(1000);
 TME_SiArmTDiff
 all_particles=TME_Al50_EvdE(false)
 stopped_protons=TME_Al50_EvdE(true)
+#TMEViewer
 
 [ analyse_pulses ]
 analyse_channels=muSc
-muSc=FirstComplete(0.60)
+muSc=FirstComplete(0.60, false, false)
 
 analyse_channels+=SiR2-S
 #analyse_channels+=SiR2-F
 analyse_channels+=SiL2-S
 #analyse_channels+=SiL2-F
-SiR2-S=FirstComplete(0.60)
+SiR2-S=FirstComplete(0.60, false, false)
 #SiR2-F=FirstComplete(0.90)
-SiL2-S=FirstComplete(0.60)
+SiL2-S=FirstComplete(0.60, false, false)
 #SiL2-F=FirstComplete(0.90)
 
 analyse_channels+=SiR1-1-S
 analyse_channels+=SiR1-2-S
 analyse_channels+=SiR1-3-S
 analyse_channels+=SiR1-4-S
-SiR1-1-S=FirstComplete(0.60)
-SiR1-2-S=FirstComplete(0.40)
-SiR1-3-S=FirstComplete(0.90)
-SiR1-4-S=FirstComplete(0.70)
+SiR1-1-S=FirstComplete(0.60, false, false)
+SiR1-2-S=FirstComplete(0.40, false, false)
+SiR1-3-S=FirstComplete(0.90, false, false)
+SiR1-4-S=FirstComplete(0.70, false, false)
 
 #analyse_channels+=SiR1-1-F
 #analyse_channels+=SiR1-2-F
@@ -68,10 +68,10 @@ analyse_channels+=SiL1-1-S
 analyse_channels+=SiL1-2-S
 analyse_channels+=SiL1-3-S
 analyse_channels+=SiL1-4-S
-SiL1-1-S=FirstComplete(0.50)
-SiL1-2-S=FirstComplete(0.30)
-SiL1-3-S=FirstComplete(0.40)
-SiL1-4-S=FirstComplete(0.70)
+SiL1-1-S=FirstComplete(0.50, false, false)
+SiL1-2-S=FirstComplete(0.30, false, false)
+SiL1-3-S=FirstComplete(0.40, false, false)
+SiL1-4-S=FirstComplete(0.70, false, false)
 
 #analyse_channels+=SiL1-1-F
 #analyse_channels+=SiL1-2-F
