For this dataset the vetos on the left and right were fine so add them in to be analysed

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -82,6 +82,11 @@ SiL1-4-S=FirstComplete(0.70, false, false)
 #SiL1-3-F=FirstComplete(0.40)
 #SiL1-4-F=FirstComplete(0.90)
 
+analyse_channels+=ScL
+analyse_channels+=ScR
+ScL=FirstComplete(0.50, false, false)
+ScR=FirstComplete(0.50, false, false)
+
 [ pair_pulses ]
 #debug
 default_algorithm=PassThrough
