Take the TDiff of each channel with the muSc so that I can get the time resolutions for the lead systematic

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -9,18 +9,18 @@ PlotTAP_Amplitude
 PlotTAP_Time
 PlotTAP_Energy
 
-sir2=PlotTAP_TDiff(SiR2-S, SiR2-F)
-sil2=PlotTAP_TDiff(SiL2-S, SiL2-F)
+sir2=PlotTAP_TDiff(SiR2-S, muSc, -2000,2000)
+sil2=PlotTAP_TDiff(SiL2-S, muSc, -2000,2000)
 
-sir1-1=PlotTAP_TDiff(SiR1-1-S, SiR1-1-F)
-sir1-2=PlotTAP_TDiff(SiR1-2-S, SiR1-2-F)
-sir1-3=PlotTAP_TDiff(SiR1-3-S, SiR1-3-F)
-sir1-4=PlotTAP_TDiff(SiR1-4-S, SiR1-4-F)
+sir1-1=PlotTAP_TDiff(SiR1-1-S, muSc, -2000,2000)
+sir1-2=PlotTAP_TDiff(SiR1-2-S, muSc, -2000,2000)
+sir1-3=PlotTAP_TDiff(SiR1-3-S, muSc, -2000,2000)
+sir1-4=PlotTAP_TDiff(SiR1-4-S, muSc, -2000,2000)
 
-sil1-1=PlotTAP_TDiff(SiL1-1-S, SiL1-1-F)
-sil1-2=PlotTAP_TDiff(SiL1-2-S, SiL1-2-F)
-sil1-3=PlotTAP_TDiff(SiL1-3-S, SiL1-3-F)
-sil1-4=PlotTAP_TDiff(SiL1-4-S, SiL1-4-F)
+sil1-1=PlotTAP_TDiff(SiL1-1-S, muSc, -2000,2000)
+sil1-2=PlotTAP_TDiff(SiL1-2-S, muSc, -2000,2000)
+sil1-3=PlotTAP_TDiff(SiL1-3-S, muSc, -2000,2000)
+sil1-4=PlotTAP_TDiff(SiL1-4-S, muSc, -2000,2000)
 
 pair_pulses = MakeDetectorPulses
 PlotTDPs
