--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -9,25 +9,25 @@ PlotTAP_Amplitude
 PlotTAP_Time
 PlotTAP_Energy
 
-sir2=PlotTAP_TDiff(SiR2-S, muSc, -2000,2000)
-sil2=PlotTAP_TDiff(SiL2-S, muSc, -2000,2000)
+SiR2-S=PlotTAP_TDiff(SiR2-S, muSc, -2000,2000)
+SiL2-S=PlotTAP_TDiff(SiL2-S, muSc, -2000,2000)
 
-sir1-1=PlotTAP_TDiff(SiR1-1-S, muSc, -2000,2000)
-sir1-2=PlotTAP_TDiff(SiR1-2-S, muSc, -2000,2000)
-sir1-3=PlotTAP_TDiff(SiR1-3-S, muSc, -2000,2000)
-sir1-4=PlotTAP_TDiff(SiR1-4-S, muSc, -2000,2000)
+SiR1-1-S=PlotTAP_TDiff(SiR1-1-S, muSc, -2000,2000)
+SiR1-2-S=PlotTAP_TDiff(SiR1-2-S, muSc, -2000,2000)
+SiR1-3-S=PlotTAP_TDiff(SiR1-3-S, muSc, -2000,2000)
+SiR1-4-S=PlotTAP_TDiff(SiR1-4-S, muSc, -2000,2000)
 
-sil1-1=PlotTAP_TDiff(SiL1-1-S, muSc, -2000,2000)
-sil1-2=PlotTAP_TDiff(SiL1-2-S, muSc, -2000,2000)
-sil1-3=PlotTAP_TDiff(SiL1-3-S, muSc, -2000,2000)
-sil1-4=PlotTAP_TDiff(SiL1-4-S, muSc, -2000,2000)
+SiL1-1-S=PlotTAP_TDiff(SiL1-1-S, muSc, -2000,2000)
+SiL1-2-S=PlotTAP_TDiff(SiL1-2-S, muSc, -2000,2000)
+SiL1-3-S=PlotTAP_TDiff(SiL1-3-S, muSc, -2000,2000)
+SiL1-4-S=PlotTAP_TDiff(SiL1-4-S, muSc, -2000,2000)
 
 pair_pulses = MakeDetectorPulses
 PlotTDPs
 
 muon_events = MakeMuonEvents
 CheckTMEs
-#TME_RemoveScatteredMuons(1000);
+TME_RemoveScatteredMuons(100);
 TME_SiArmTDiff
 all_particles=TME_Al50_EvdE(false)
 stopped_protons=TME_Al50_EvdE(true)
@@ -82,10 +82,10 @@ SiL1-4-S=FirstComplete(0.70, false, false)
 #SiL1-3-F=FirstComplete(0.40)
 #SiL1-4-F=FirstComplete(0.90)
 
-analyse_channels+=ScL
-analyse_channels+=ScR
-ScL=FirstComplete(0.50, false, false)
-ScR=FirstComplete(0.50, false, false)
+#analyse_channels+=ScL
+#analyse_channels+=ScR
+#ScL=FirstComplete(0.50, false, true)
+#ScR=FirstComplete(0.50, false, true)
 
 [ pair_pulses ]
 #debug
