Added a statistics module to keep from counting every time. Counts livetime according to last muSc, number of muSc hits above certain threshold, and number of PP muSc hits above threshold

--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -1,6 +1,6 @@
 [ MODULES ]
-IslandAmplitude
 ge = GeSpectrum
+stats = Stats
 
 [ ge ]
 musc_cf=0.50
@@ -13,3 +13,8 @@ tw_small=500.
 tw_pp=10000.
 musc_min_height=230
 calib=false
+
+[ stats ]
+musc_height_cut=230
+pp_window=10000.
+musc_cf=0.50
