Added new time window paramteres to Ge spectrum

--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -7,10 +7,17 @@ musc_cf=0.50
 ge_gen=FirstComplete
 ge_cfg={constant_fraction=0.90}
 ge_cf=0.90
+scge_gen=FirstComplete
+scge_cfg={constant_fraction=1.00}
+scge_cf=1.00
 ge_slow_timing=false
-tw_big=1400.0
 tw_small=500.
-tw_pp=10000.
+tw_big=1400.0
+tw_asymmetric=-100 200
+pu_protect=true
+cp_protect=false
+pu_window=10000.
+cp_window=200.
 musc_min_height=230
 calib=false
 
