Long time since last change.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 midas/linux
 midas/linux64
 /dir/
-CAEN/lib/*
-*/*.so
-*/*.d
-*/*.a
-*/*.o
-*/crate
+CAEN/*
+tmp/*
+test/*
+test_midas/*
+hist/*
+crate
 bit3_mvme/kinoko_vmedrv/*.o
 bit3_mvme/kinoko_vmedrv/*.ko*
 bit3_mvme/kinoko_vmedrv/*.mod*
@@ -15,6 +15,16 @@ www/html/cache/*
 www/html/trend/*
 *~
 #*
-exptab
 /sqlite*/
 *.pyc
+*.SHM
+*.o
+*.ko*
+*.so
+*.a
+*.d
+*.root
+*.class
+*.idx
+*.idf
+*.hst
